--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -128,9 +128,9 @@
                                       </div>
                                   {% else %}
                                       <button type="button" class="my-button btn btn-warning"> <span class="glyphicon glyphicon-star-empty"></span> 收藏 </button>
-                                      <button  class="button-tweet-praise my-button button btn btn-success"  data-id="{{t.id}}" value="{{t.praise}}"><span class="glyphicon glyphicon-thumbs-up"></span> {{ t.praise }} </button>
-                                      <button id="id-button-transmit-{{t.id}}" class="button-tweet-transmit my-button button btn btn-info"  data-id="{{t.id}}" value="{{t.transmit_count}}" data-toggle="modal" data-target="#myModal"> <span class="glyphicon glyphicon-new-window"></span> {{ t.transmit_count }} </button>
-                                      <button id="id-button-comment-{{t.id}}" class="button-tweet-comment my-button button btn btn-primary" data-id="{{t.id}}" value="{{t.comments_count}}" data-toggle="collapse" data-target="#collapseExample-{{t.id}}" aria-expanded="false" aria-controls="collapseExample"><span class="glyphicon glyphicon-comment"> </span> {{ t.comments_count }} </button>
+                                      <button id="id-button-praise-{{t.id}}" class="button-tweet-praise my-button button btn btn-success"  data-id="{{t.id}}" value="{{t.praise}}"><span class="glyphicon glyphicon-thumbs-up"></span> <em> {{ t.praise }}</em> </button>
+                                      <button id="id-button-transmit-{{t.id}}" class="button-tweet-transmit my-button button btn btn-info"  data-id="{{t.id}}" value="{{t.transmit_count}}" data-toggle="modal" data-target="#myModal"> <span class="glyphicon glyphicon-new-window"></span> <em> {{ t.transmit_count }} </em>  </button>
+                                      <button id="id-button-comment-{{t.id}}" class="button-tweet-comment my-button button btn btn-primary" data-id="{{t.id}}" value="{{t.comments_count}}" data-toggle="collapse" data-target="#collapseExample-{{t.id}}" aria-expanded="false" aria-controls="collapseExample"><span class="glyphicon glyphicon-comment"> </span> <em> {{ t.comments_count }}</em> </button>
                                   {% endif %}
                               </div>
                         </div>
@@ -170,7 +170,7 @@
                                   </div>
                                   <div class="my-tweet-buttons">
                                       <button type="button" class="my-button btn btn-warning"> <span class="glyphicon glyphicon-star-empty"></span> 收藏 </button>
-                                      <button  class=" my-button button btn btn-success"  data-id="{{t.id}}" value="{{tpraise}}"><span class="glyphicon glyphicon-thumbs-up"></span> {{ t.praise }} </button>
+                                      <button  class=" my-button button btn btn-success"  data-id="{{t.id}}" value="{{tpraise}}"><span class="glyphicon glyphicon-thumbs-up"></span> <em> {{ t.praise }}</em> </button>
                                       <button  class=" my-button button btn btn-info"  data-id="{{t.id}}"  data-target="#myModal"><span class="glyphicon glyphicon-new-window"></span> {{ t.transmit_count }} </button>
                                       <button  class="button-tweet-comment my-button button btn btn-primary" > <span class="glyphicon glyphicon-comment"></span> {{ t.comments_count }} </button>
                                   </div>
@@ -199,8 +199,8 @@
                                  <div class="my-transmit-bottom">
                                   <button type="button" class="my-transmit-button btn btn-warning"> <span class="glyphicon glyphicon-star-empty"></span> 收藏 </button>
                                   <button  class="button-tweet-praise my-transmit-button button btn btn-success"  data-id="{{t.id}}" value="{{t.praise}}"><span class="glyphicon glyphicon-thumbs-up"></span> {{t.praise }} </button>
-                                  <button id="id-button-transmit-{{t.id}}" class="button-tweet-transmit my-transmit-button button btn btn-info"  data-id="{{t.id}}" value="{{t.transmit_count}}" data-toggle="modal" data-target="#myModal"> <span class="glyphicon glyphicon-new-window"></span> {{ t.transmit_count }} </button>
-                                  <button id="id-button-comment-{{t.id}}" class="button-tweet-comment my-transmit-button button btn btn-primary" data-id="{{t.id}}" value="{{t.comments_count}}" data-toggle="collapse" data-target="#collapseExample-{{t.id}}" aria-expanded="false" aria-controls="collapseExample"><span class="glyphicon glyphicon-comment"> </span> {{ t.comments_count }} </button>
+                                  <button id="id-button-transmit-{{t.id}}" class="button-tweet-transmit my-transmit-button button btn btn-info"  data-id="{{t.id}}" value="{{t.transmit_count}}" data-toggle="modal" data-target="#myModal"> <span class="glyphicon glyphicon-new-window"></span> <em> {{ t.transmit_count }} </em>  </button>
+                                  <button id="id-button-comment-{{t.id}}" class="button-tweet-comment my-transmit-button button btn btn-primary" data-id="{{t.id}}" value="{{t.comments_count}}" data-toggle="collapse" data-target="#collapseExample-{{t.id}}" aria-expanded="false" aria-controls="collapseExample"><span class="glyphicon glyphicon-comment"> </span> <em> {{ t.comments_count }}</em> </button>
                                 </div>
                                 {% endif %}
 
