修改加载微博bug，游客登录优化

--- a/templates/login.html
+++ b/templates/login.html
@@ -109,8 +109,8 @@
             });
             $('#id-button-visitor').on('click', function(){
                 var form = {
-                    username: 'youke',
-                    password: '123456',
+                    username: 'youkelaile',
+
                 }
                 login(form);
             });
