--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -236,6 +236,10 @@
           </div>
       </div>
   </div>
-  <button class='button-tweet-loadTweets-timeline  button btn btn-info' data-id="{{ tweets[-1].id }}">更多</button>
+   {% if tweets==[] %}
+        <button class='button-tweet-loadTweets-plaza  button btn btn-info' data-id="1">更多</button>
+   {% else %}
+        <button class='button-tweet-loadTweets-plaza  button btn btn-info' data-id="{{ tweets[-1].id }}">更多</button>
+   {% endif %}
 </body>
 </html>
