修改加载微博按钮位置，添加鼠标滚动到底部自动加载微博

--- a/static/css/mycss.css
+++ b/static/css/mycss.css
@@ -283,8 +283,10 @@
     color: #2b2828;
     background-color: rgba(91, 192, 222, 0);
     border-color: rgba(70, 184, 218, 0);
-    position:fixed;
-    bottom:0;
+    clear: both;
+    position: relative;
+    margin-top: -42px;
+    height: 37px;
 }
 
 .button-tweet-loadTweets-timeline {
@@ -292,6 +294,8 @@
     color: #2b2828;
     background-color: rgba(91, 192, 222, 0);
     border-color: rgba(70, 184, 218, 0);
-    position:fixed;
-    bottom:0;
+    clear: both;
+    position: relative;
+    margin-top: -42px;
+    height: 37px;
 }
