--- a/templates/plaza.html
+++ b/templates/plaza.html
@@ -214,9 +214,9 @@
     </div>
 </div>
   {% if tweets==[] %}
-        <button class='button-tweet-loadTweets-plaza  button btn btn-info' data-id="1">更多</button>
+        <button class='button-tweet-loadTweets-plaza ' data-id="1"></button>
   {% else %}
-        <button class='button-tweet-loadTweets-plaza  button btn btn-info' data-id="{{ tweets[-1].id }}">更多</button>
+        <button class='button-tweet-loadTweets-plaza ' data-id="{{ tweets[-1].id }}"></button>
   {% endif %}
 </body>
 </html>
