--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -252,9 +252,9 @@
       </div>
   </div>
    {% if tweets==[] %}
-        <button class='button-tweet-loadTweets-timeline  button btn btn-info' data-id="1">更多</button>
+        <button class='button-tweet-loadTweets-timeline  ' data-id="1"></button>
    {% else %}
-        <button class='button-tweet-loadTweets-timeline  button btn btn-info' data-id="{{ tweets[-1].id }}">更多</button>
+        <button class='button-tweet-loadTweets-timeline  ' data-id="{{ tweets[-1].id }}"></button>
    {% endif %}
 </body>
 </html>
