--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -74,8 +74,8 @@
     </div>
   </div>
   </nav>
-  <div class="my-container">
-      <div class="my-connects">
+  <div class="my-container row">
+      <div class="my-connects col-xs-12 col-sm-6 col-md-8">
             <div class="my-tweet-add">
                 <h1><small>你可以在这里发微博<h1>
                 <textarea id="id-input-tweet"  autocomplete="off" class="my-input-warning form-control" rows="3" placeholder="说点啥"></textarea>
@@ -241,8 +241,8 @@
                 </div>
             </div>
       </div>
-      <div class="my-timeline-sidebar">
-          <div calss="my-sidebar-image">
+      <div class="my-timeline-sidebar col-xs-6 col-md-4 visible-lg">
+          <div class="my-sidebar-image">
             <img src={{user.portrait}} alt="..." width="150" height="150" class="img-thumbnail">
         </div>
         <div class="my-sidebar-connect">
