--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> 个人主页 </title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/mycss.css">
@@ -74,7 +73,7 @@
     </div>
   </div>
   </nav>
-  <div class="my-container row">
+  <div class="my-container container">
       <div class="my-connects col-xs-12 col-sm-6 col-md-8">
             <div class="my-tweet-add">
                 <h1><small>你可以在这里发微博<h1>
