--- a/templates/plaza.html
+++ b/templates/plaza.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> 微博广场 </title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/mycss.css">
@@ -72,7 +71,7 @@
     </div>
   </div>
   </nav>
-  <div class="my-container row">
+  <div class="my-container container">
     <div class="my-connects col-xs-12 col-sm-6 col-md-8">
         {% for t in tweets %}
             {% if t.transmit == '0' %}
