--- a/static/css/mycss.css
+++ b/static/css/mycss.css
@@ -2,7 +2,7 @@
 .my-body {
     background-image: url(../image/010223.jpg);
     /*background-repeat:no-repeat;*/
-    background-repeat: round;
+    background-repeat: no-repeat;
     background-attachment:fixed;
     background-size: cover;
 }
